@@ -1,0 +1,3 @@
+MD5 309d2c353392d1b7caf3bb48980c743d asio-0.3.8.tar.bz2 509783
+RMD160 2b47a071cf65730b9958dcdcd312a2a7e00441b6 asio-0.3.8.tar.bz2 509783
+SHA256 461466c6630c1025ff5a8174868967cad87500c13e5751337f4ce102eb335e7e asio-0.3.8.tar.bz2 509783
